fix: text and color contrast

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,7 +3,7 @@
 :root {
   --bg: #e9f1f6;
   --card: #cad7df;
-  --upper-card: #9aa4aa;
+  --upper-card: #aab6bc;
   --card-text: var(--bg);
   --primary: #609fd3;
   --secondary: #4f8bbc;
@@ -129,6 +129,7 @@ a {
   display: block;
   color: var(--main-text);
   font-size: 1.2rem;
+  font-weight: 500;
   margin-bottom: 5px;
 }
 
@@ -138,7 +139,7 @@ a {
   padding: 10px;
   width: 100%;
   font-size: 1.1rem;
-  color: var(--card-text);
+  color: var(--main-text);
   border-radius: var(--round-sm);
   outline: none;
   border: solid transparent 2px;
@@ -166,7 +167,7 @@ a {
 }
 
 .button:focus {
-  border: solid var(--card-text) 2px;
+  border: solid var(--main-text) 2px;
   transition: 0.1s;
 }
 
@@ -212,7 +213,7 @@ a {
   max-width: 340px;
   padding: 20px;
   border-radius: var(--round-sm);
-  border: 2px dashed transparent;
+  border: 4px dashed transparent;
   cursor: pointer;
   transition:
     background 0.2s ease-in-out,
@@ -232,9 +233,9 @@ a {
 }
 
 .drop-title {
-  color: var(--card-text);
+  color: var(--main-text);
   font-size: 1.2rem;
-  font-weight: 400;
+  font-weight: 500;
   text-align: center;
   transition: color 0.2s ease-in-out;
 }
